force-app/main/default/objects/Work_Assignment__c/Work_Assignment__c.object-meta.xml
<CustomObject>
    <description>For task management</description>
    <label>Work Assignment</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Work Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>