force-app/main/default/objects/Work_Assignment__c/fields/Accept_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Accept_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accept Assignment</description>
    <inlineHelpText>Accept Assignment</inlineHelpText>
    <label>Accept Assignment</label>
    <type>Checkbox</type>
</CustomField>