force-app/main/default/objects/Work_Assignment__c/fields/Account_Being_CB_Reported_By_Agency__c.field-meta.xml
<CustomField>
    <fullName>Account_Being_CB_Reported_By_Agency__c</fullName>
    <description>Account Being Credit Bureau Reported By Agency</description>
    <inlineHelpText>Account Being Credit Bureau Reported By Agency</inlineHelpText>
    <label>Account Being CB Reported By Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>