force-app/main/default/objects/Work_Assignment__c/fields/Account_History_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Account_History_Transcript__c</fullName>
    <description>Account History Transcript</description>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account History Transcript</inlineHelpText>
    <label>Account History Transcript</label>
    <type>Text</type>
</CustomField>