force-app/main/default/objects/Work_Assignment__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number</description>
    <formula>Product__r.Name</formula>
    <inlineHelpText>This field is used for Distressed Account</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>