force-app/main/default/objects/Work_Assignment__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Product Type</description>
    <formula>Product__r.Product_Type__c</formula>
    <inlineHelpText>Product Type</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>