force-app/main/default/objects/Work_Assignment__c/fields/Agency_Currently_Has_Account_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Agency_Currently_Has_Account_On_Hold__c</fullName>
    <description>Agency Currently Has Account On Hold</description>
    <inlineHelpText>Agency Currently Has Account On Hold</inlineHelpText>
    <label>Agency Currently Has Account(s) On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>