force-app/main/default/objects/Work_Assignment__c/fields/Agency_Investigation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agency_Investigation_Notes__c</fullName>
    <description>Agency Investigation Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Investigation Notes</inlineHelpText>
    <label>Agency Investigation Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>