force-app/main/default/objects/Work_Assignment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application</description>
    <inlineHelpText>Application</inlineHelpText>
    <label>Application</label>
    <type>Checkbox</type>
</CustomField>