force-app/main/default/objects/Work_Assignment__c/fields/Application_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Application_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Chargeable Media</description>
    <inlineHelpText>Application Chargeable Media</inlineHelpText>
    <label>Application Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>