force-app/main/default/objects/Work_Assignment__c/fields/Application_Frml__c.field-meta.xml
<CustomField>
    <fullName>Application_Frml__c</fullName>
    <description>Checks whether the work assignment is for application. This field is used for media report.</description>
    <formula>(IF(Application__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for application. This field is used for media report.</inlineHelpText>
    <label>Application</label>
    <type>Text</type>
</CustomField>