force-app/main/default/objects/Work_Assignment__c/fields/AssetID_Secondary__c.field-meta.xml
<CustomField>
    <fullName>AssetID_Secondary__c</fullName>
    <description>Previous Secondary Account Number</description>
    <formula>Product__r.Previous_Secondary_Account_Number__c</formula>
    <inlineHelpText>Previous Secondary Account Number</inlineHelpText>
    <label>AssetID Secondary</label>
    <type>Text</type>
</CustomField>