force-app/main/default/objects/Work_Assignment__c/fields/Assign_To_Agency_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Agency_User__c</fullName>
    <description>Assigned To Agency User</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Assigned To Agency User</inlineHelpText>
    <label>Assigned To Agency User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>