force-app/main/default/objects/Work_Assignment__c/fields/Assigned_O_S__c.field-meta.xml
<CustomField>
    <fullName>Assigned_O_S__c</fullName>
    <description>Assigned O/S $</description>
    <formula>&apos; &apos;</formula>
    <inlineHelpText>Assigned O/S $</inlineHelpText>
    <label>Assigned O/S</label>
    <type>Text</type>
</CustomField>