force-app/main/default/objects/Work_Assignment__c/fields/Assigned_To_Agency_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Agency_User_Email__c</fullName>
    <description>This field stores the email id of the agency user and this field will be used for back-end purposes and pass the email id to portal when the user accepts the assignment instead of its name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the email id of the agency user and this field will be used for back-end purposes and pass the email id to portal when the user accepts the assignment instead of its name</inlineHelpText>
    <label>Assigned To Agency User Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>