force-app/main/default/objects/Work_Assignment__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned To User</description>
    <inlineHelpText>Assigned To User</inlineHelpText>
    <label>Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>