force-app/main/default/objects/Work_Assignment__c/fields/Assigned_To_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User_Name__c</fullName>
    <description>Assigned To User Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Assigned To User Name</inlineHelpText>
    <label>Assigned To User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>