force-app/main/default/objects/Work_Assignment__c/fields/Canaccede_Entity__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Entity__c</fullName>
    <description>Canaccede Entity</description>
    <formula>Product__r.Account_Purchasing_Entity_Value__c</formula>
    <inlineHelpText>Canaccede Entity</inlineHelpText>
    <label>Canaccede Entity</label>
    <type>Text</type>
</CustomField>