force-app/main/default/objects/Work_Assignment__c/fields/Canaccede_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Entity_ID__c</fullName>
    <formula>Product__r.Account_Purchasing_Entity__c</formula>
    <label>Canaccede Entity ID</label>
    <type>Text</type>
</CustomField>