force-app/main/default/objects/Work_Assignment__c/fields/Cardholder_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cardholder Agreement</description>
    <inlineHelpText>Cardholder Agreement</inlineHelpText>
    <label>Cardholder Agreement</label>
    <type>Checkbox</type>
</CustomField>