force-app/main/default/objects/Work_Assignment__c/fields/Cardholder_Agreement_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Agreement_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cardholder Agreement Chargeable Media</description>
    <inlineHelpText>Cardholder Agreement Chargeable Media</inlineHelpText>
    <label>Cardholder Agreement Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>