force-app/main/default/objects/Work_Assignment__c/fields/Cardholder_Agreement_Frml__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Agreement_Frml__c</fullName>
    <description>Checks whether the work assignment is for Cardholder Agreement. This field is used for media report.</description>
    <formula>(IF(Cardholder_Agreement__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Cardholder Agreement. This field is used for media report.</inlineHelpText>
    <label>Cardholder Agreement</label>
    <type>Text</type>
</CustomField>