force-app/main/default/objects/Work_Assignment__c/fields/Cardholder_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Agreement_Status__c</fullName>
    <description>Cardholder Agreement Status</description>
    <inlineHelpText>Cardholder Agreement Status</inlineHelpText>
    <label>Cardholder Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>