force-app/main/default/objects/Work_Assignment__c/fields/CFG_Complaint_Analysis__c.field-meta.xml
<CustomField>
    <fullName>CFG_Complaint_Analysis__c</fullName>
    <description>CFG Complaint Analysis</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CFG Complaint Analysis</inlineHelpText>
    <label>CFG Complaint Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>