force-app/main/default/objects/Work_Assignment__c/fields/Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Date__c</fullName>
    <description>Charge Off Date</description>
    <formula>Product__r.Charged_Off_Date__c</formula>
    <inlineHelpText>Charge Off Date</inlineHelpText>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>