force-app/main/default/objects/Work_Assignment__c/fields/Charge_Off_Statement__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Charge Off Statement</description>
    <inlineHelpText>Charge Off Statement</inlineHelpText>
    <label>Charge Off Statement</label>
    <type>Checkbox</type>
</CustomField>