force-app/main/default/objects/Work_Assignment__c/fields/Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chargeable Media</description>
    <inlineHelpText>Chargeable Media</inlineHelpText>
    <label>Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>