force-app/main/default/objects/Work_Assignment__c/fields/Check_Copy__c.field-meta.xml
<CustomField>
    <fullName>Check_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Copy</description>
    <inlineHelpText>Check Copy</inlineHelpText>
    <label>Check Copy</label>
    <type>Checkbox</type>
</CustomField>