force-app/main/default/objects/Work_Assignment__c/fields/Check_Copy_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Check_Copy_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Copy Chargeable Media</description>
    <inlineHelpText>Check Copy Chargeable Media</inlineHelpText>
    <label>Check Copy Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>