force-app/main/default/objects/Work_Assignment__c/fields/Check_Copy_Frml__c.field-meta.xml
<CustomField>
    <fullName>Check_Copy_Frml__c</fullName>
    <description>Checks whether the work assignment is for Check Copy. This field is used for media report.</description>
    <formula>(IF(Check_Copy__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Check Copy. This field is used for media report.</inlineHelpText>
    <label>Check Copy</label>
    <type>Text</type>
</CustomField>