force-app/main/default/objects/Work_Assignment__c/fields/Check_Copy_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Copy_Status__c</fullName>
    <description>Check Copy Status</description>
    <inlineHelpText>Check Copy Status</inlineHelpText>
    <label>Check Copy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>