force-app/main/default/objects/Work_Assignment__c/fields/Comment_Reply__c.field-meta.xml
<CustomField>
    <fullName>Comment_Reply__c</fullName>
    <description>Comment/Reply</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comment/Reply</inlineHelpText>
    <label>Comment/Reply</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>