force-app/main/default/objects/Work_Assignment__c/fields/Comments_History__c.field-meta.xml
<CustomField>
    <fullName>Comments_History__c</fullName>
    <description>Comments History</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments History</inlineHelpText>
    <label>Comments History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>