force-app/main/default/objects/Work_Assignment__c/fields/Complaint_Related_To_Another_Products__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Related_To_Another_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does This Complaint Related To Another Product</description>
    <inlineHelpText>Does This Complaint Related To Another Product</inlineHelpText>
    <label>Complaint Related To Another Account ID</label>
    <type>Checkbox</type>
</CustomField>