force-app/main/default/objects/Work_Assignment__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <description>Complaint Type</description>
    <inlineHelpText>Complaint Type</inlineHelpText>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Business Bureau</fullName>
            </value>
            <value>
                <fullName>Credit Bureau Request From Equifax or TU</fullName>
            </value>
            <value>
                <fullName>Letter From Lawyer / Law Firm / Paralegal</fullName>
            </value>
            <value>
                <fullName>Verbal From Consumer Directly</fullName>
            </value>
            <value>
                <fullName>Written From Consumer Directly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ministry / Regulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>