force-app/main/default/objects/Work_Assignment__c/fields/Complaint_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type_Other__c</fullName>
    <description>Complaint Type Other</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Complaint Type Other</inlineHelpText>
    <label>Complaint Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>