force-app/main/default/objects/Work_Assignment__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Created_By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Created_By</inlineHelpText>
    <label>Created_By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>