force-app/main/default/objects/Work_Assignment__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>When a complaint is raised against any product and don&apos;t able to populate Customer then they can input Customer Name which will be read only field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>