force-app/main/default/objects/Work_Assignment__c/fields/Date_Complaint_Received_By_Agency__c.field-meta.xml
<CustomField>
    <fullName>Date_Complaint_Received_By_Agency__c</fullName>
    <description>Date Complaint Received By Agency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Complaint Received By Agency</inlineHelpText>
    <label>Date Complaint Received By Agency</label>
    <type>Date</type>
</CustomField>