force-app/main/default/objects/Work_Assignment__c/fields/Days_Since_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Open__c</fullName>
    <description>Days Since Open</description>
    <formula>TODAY() - Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days Since Open</inlineHelpText>
    <label>Days Since Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>