force-app/main/default/objects/Work_Assignment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>