force-app/main/default/objects/Work_Assignment__c/fields/Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drivers License</description>
    <inlineHelpText>Drivers License</inlineHelpText>
    <label>Drivers License</label>
    <type>Checkbox</type>
</CustomField>