force-app/main/default/objects/Work_Assignment__c/fields/Drivers_License_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drivers License Chargeable Media</description>
    <inlineHelpText>Drivers License Chargeable Media</inlineHelpText>
    <label>Drivers License Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>