force-app/main/default/objects/Work_Assignment__c/fields/Drivers_License_Frml__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Frml__c</fullName>
    <description>Checks whether the work assignment is for Drivers License. This field is used for media report.</description>
    <formula>(IF( Drivers_License__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Drivers License. This field is used for media report.</inlineHelpText>
    <label>Drivers License</label>
    <type>Text</type>
</CustomField>