force-app/main/default/objects/Work_Assignment__c/fields/Drivers_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Status__c</fullName>
    <description>Drivers License Status</description>
    <inlineHelpText>Drivers License Status</inlineHelpText>
    <label>Drivers License Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>