force-app/main/default/objects/Work_Assignment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>