force-app/main/default/objects/Work_Assignment__c/fields/File_Being_Credit_Bureau_Reported__c.field-meta.xml
<CustomField>
    <fullName>File_Being_Credit_Bureau_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>File Being Credit Bureau Reported by Agency</description>
    <inlineHelpText>File Being Credit Bureau Reported by Agency</inlineHelpText>
    <label>File Being CB Reported by Agency</label>
    <type>Checkbox</type>
</CustomField>