force-app/main/default/objects/Work_Assignment__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name</description>
    <formula>Product__r.First_Name__c</formula>
    <inlineHelpText>First Name</inlineHelpText>
    <label>First Name</label>
    <type>Text</type>
</CustomField>