force-app/main/default/objects/Work_Assignment__c/fields/Have_You_Provided_Supporting_Media__c.field-meta.xml
<CustomField>
    <fullName>Have_You_Provided_Supporting_Media__c</fullName>
    <description>Have You Provided Supporting Media</description>
    <inlineHelpText>Have You Provided Supporting Media</inlineHelpText>
    <label>Have You Provided Supporting Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>