force-app/main/default/objects/Work_Assignment__c/fields/Inbound_API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Inbound_API_Request_Body__c</fullName>
    <description>API Request Body for Salesforce to Portal sync and vice versa</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API Request Body</inlineHelpText>
    <label>Inbound API Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>