force-app/main/default/objects/Work_Assignment__c/fields/Is_Multiple_Products__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator whether there are product which are not assigned to the agency.</description>
    <inlineHelpText>Indicator whether there are product which are not assigned to the agency.</inlineHelpText>
    <label>Is Multiple Products</label>
    <type>Checkbox</type>
</CustomField>