force-app/main/default/objects/Work_Assignment__c/fields/Is_The_Complaint_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Complaint_Valid__c</fullName>
    <description>Is Complaint Justified</description>
    <inlineHelpText>Is Complaint Justified</inlineHelpText>
    <label>Is Complaint Justified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>