force-app/main/default/objects/Work_Assignment__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Judgment</description>
    <inlineHelpText>Judgment</inlineHelpText>
    <label>Judgment ID</label>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>Work Assignments</relationshipLabel>
    <relationshipName>Work_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>