force-app/main/default/objects/Work_Assignment__c/fields/Judgment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Identifier__c</fullName>
    <description>Judgment_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Judgment_Identifier</inlineHelpText>
    <label>Judgment_Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>