force-app/main/default/objects/Work_Assignment__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name</description>
    <formula>Product__r.Last_Name__c</formula>
    <inlineHelpText>Last Name</inlineHelpText>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>