force-app/main/default/objects/Work_Assignment__c/fields/Last_Payment_Charge_Off_Statement__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Charge_Off_Statement__c</fullName>
    <description>Last Payment Statement +1 &amp; Charge Off Statement</description>
    <formula>&apos; &apos;</formula>
    <inlineHelpText>Last Payment Statement +1 &amp; Charge Off Statement</inlineHelpText>
    <label>Last Payment + Charge Off Statement</label>
    <type>Text</type>
</CustomField>