force-app/main/default/objects/Work_Assignment__c/fields/Last_Payment_Statement__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Last Payment Statement</description>
    <inlineHelpText>Last Payment Statement</inlineHelpText>
    <label>Last Payment Statement</label>
    <type>Checkbox</type>
</CustomField>