force-app/main/default/objects/Work_Assignment__c/fields/Latest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Comment__c</fullName>
    <description>Store the latest comment used for the back end purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store the latest comment used for the back end purposes</inlineHelpText>
    <label>Latest Comment</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>